force-app/main/default/objects/Subject__c/fields/Pass_Score__c.field-meta.xml
<CustomField>
    <fullName>Pass_Score__c</fullName>
    <label>Pass Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>