force-app/main/default/objects/Subject__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <label>Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subject_Types</valueSetName>
    </valueSet>
</CustomField>